k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newevent-ingress
  namespace: newevent
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/event
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 5001
          - path: /api/v1/program
            pathType: Prefix
            backend:
              service:
                name: program-service
                port:
                  number: 5002
          - path: /api/v1/registration
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 5003
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5006
          - path: /api/v1/collect
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 5005
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
